fix: extra spacing

--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -1,7 +1,5 @@
 .root {
   padding: 56px 20px;
-  min-height: 100%;
-  width: 100%;
   background: #6c757c;
   color: #f5f5f5;
 }
